[tool.poetry]
name = "git-token"
version = "1.0.0"
description = "Package to get github token using Github App"
authors = ["shubham-kum <shubham.kumar@amagi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^2.0.2"
jwt = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"